Adicionando testes, bibliotecas Kotlin e java 25